assets/scss/components/_filters.scss
@use "govuk-frontend/dist/govuk" as *;

.sas-filters__actions {
  display: flex;
  align-items: center;
  gap: govuk-spacing(6);
  flex-wrap: nowrap;
  /* Nudge up to align button shadow to input borders */
  padding-bottom: 2px;

  & button {
    margin: 0;
    white-space: nowrap;
  }

  @media #{govuk-until-breakpoint(tablet)} {
    flex-direction: column;
    align-items: flex-start;
  }
}

.sas-filters__summary {
  padding: govuk-spacing(4);
  margin-bottom: govuk-spacing(4);
  background-color: govuk-colour("black", $variant: "tint-95");
}

.moj-filter-tags li {
  $marginRight: govuk-spacing(2);
  max-width: calc(100% - $marginRight);
}

.moj-filter__tag {
  max-width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  text-wrap: nowrap;
}

